    * 3741 FIX: omd_status: Fix labelling and structure of several metric graphs
    * 3986 FIX: esx_vsphere_counters.uptime: fixed incorrect alert when receiving corrupted counter data...
    * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
    * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...

    Multisite:
    * 3959 Two new filters for the comment view: author and comment text field
    * 3970 SEC: Fixed possible URL injection on index page...
    * 3971 Event Console: Event numbers are now also displayed in tactical overview snapin...
    * 3897 FIX: Fixed possible exception in raw edition when rendering graphs
    * 3898 FIX: Unmonitored services: Fixed possible bug in case discovery service produces unexpected output
    * 3902 FIX: Graph search view: Changing painter options made page empty
    * 3969 FIX: CentOS 5.5: Fixed incompatibility with the available OpenSSL 0.98...
    * 4037 FIX: Fix graphs that have optional metrics...
    * 3973 FIX: Backup: Fixed displaying wrong finish time after backup completion
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
    * 4046 FIX: Repaired html rendering....
    * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3901 Logfile pattern analyser: pattern lists can now be searched
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...
    * 3951 FIX: oracle_sessions: fixed bug with default absolute levels...
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...