@@ -1,0 +1,11 @@
+Title: f5_bigip_conns: readded performance data and graphs
+Level: 1
+Component: checks
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2
+Date: 1478528863
+
+f5_bigip_conns check was missing perfdata and graphs since werk #3692. This has been fixed now.
+
