@@ -51,6 +51,7 @@
     * 3986 FIX: esx_vsphere_counters.uptime: fixed incorrect alert when receiving corrupted counter data...
     * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
+    * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
 
     Multisite:
     * 3959 Two new filters for the comment view: author and comment text field
